public/default.css
body {
  height: 1400px;
  max-width: 100%;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url("/images/water-drink-glass-drinking.jpg");
  overflow-x: hidden;
}


#header {
  height: 90px;
  background-color: rgba(0,0,0,0.4);
  margin-bottom: 100px;
}

#logo {
  margin-left: 30px;
  padding-top: 25px;
  font-size: 20px;
  color: white;

}

#search-title {
  padding-left: 20%;
}

#search-form {
  padding-bottom: 10px;
}

.hide-search {
  display: none;
}

.hide-results {
  display: none;
}

.hide-menu {
  display: none;
}

#menu-container {
  font-size: 20px;
}
#section-names {
  font-weight: bold;
  font-size: 18px;

}

#restaurant-name {
  font-size: 30px;
  font-weight: bold;
}

#menu-items {
  color: gray;
  font-weight: bold;
}

.option {
  float: right;
}

#vote-button {
  margin-top: 15px;
}

#result-boxes {
  margin-left: 20px;
  font-size: 20px;
}

.hide {
  display: none;
}

.hide-login {
  display: none;
}

.hide-menu {
  display: none;
}

#view-votes {
/*  color: #36454f; */
  color: white;
  font-weight: bold;
  margin-left: 80%;
  margin-top: -40px;
  border: 2px solid white;
  border-radius: 5px;
  width: 110px;
  padding: 5px;
}

#view-votes:hover {
  color: gray;
  border-color: gray;
}

#view-meals {
/*  color: #36454f; */
  color: white;
  font-weight: bold;
  margin-left: 70%;
  margin-top: -34px;
  border: 2px solid white;
  border-radius: 5px;
  width: 110px;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 20px;
}

#view-meals:hover {
  color: gray;
  border-color: gray;
}


#welcome-message {
  float: right;
  margin-right: 390px;
  margin-top: -25px;
  color: white;
  font-size: 20px;
  text-decoration: underline;
}

.votes {
  display: none;
}

#new-vote {
  margin-left: 10%;
}

#vote-container {
  margin-left: 10%;
  margin-right: 10%
}

#test-box {
border: 1px solid black;
height: 20px;

}

#dish-box {
  /*margin-top: -10px;*/
  margin-left: 30%;
  margin-right: 30%;
  margin-bottom: -5px;
}

#the-vote {
  margin-bottom: 10px;
}

#poster-name {
  color: gainsboro;
  margin-left: 30%;
}

#dish-options {
  text-align: center;
}

.vote-radio {
  margin-left: 50%;
}

#score-box {
  margin-left: 10%;
  margin-right: 10%;
}
#dish-name {
  font-size: 40px;
  margin-left: 25%;
  font-weight: bold;
  margin-bottom: -30px;
}


#dish-score {
  font-size: 30px;
  color: gray;
  margin-left: 25%;
}

